made pump function like gt6 one